add first sentence in article

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 			
 		</article>
 		<article id="stephanie" class="team-member">
+			<p>This is Stephanie's article</p>
 			
 		</article>
 		<footer>
