--- a/index.html
+++ b/index.html
@@ -8,26 +8,30 @@
 	</head>
 	<body>
 		<header>
-			<h1>Team Exercise 1</h1>
+			<h1>TEAM EXERCISE 1</h1>
 			<nav>
 				<ul>
 					<a href="#anderson"><li>Anderson</li></a>
+					<li>/</li>
 					<a href="#andrew"><li>Andrew</li></a>
-
+					<li>/</li>
 					<a href="#stephanie"><li>Stephanie</li></a>
 				</ul>
 			</nav>
 			<img src="" id="main-pic">
 		</header>
 		<article id="anderson" class="team-member">
-			<p>Hello, my name is Anderson</p>
+			<img class="profile-pic" src="http://i.imgur.com/CeyGe84.jpg" alt="living that health goth lifestyle">
+			<h3 class="profile-name">Anderson Cook</h3>
+				<p class="profile-text">Hey guys.  This some info about me.  I'm the guy in the pic.  I can assure you that it's very serious and I mean it a lot.  I make music and loud, obnoxious noises.  I run a cassette label called <a href="http://www.tapesofaneongod.com">Tapes of a Neon God</a> in my spare time and I'm sure that spare time is now over.  You can find me on social media if you look hard enough, but they're not tied to me name as they are for making jokes.</p>
 		</article>
-		<article id="andrew" class="team-member">
+		<!--<article id="andrew" class="team-member">
 			<p>This is andrew's section</p>
 		</article>
 		<article id="stephanie" class="team-member">
 			
 		</article>
+		-->
 		<footer>
 			
 		</footer>
