--- a/index.html
+++ b/index.html
@@ -25,11 +25,17 @@
 			
 		</article>
 		<article id="stephanie" class="team-member">
-			<p>This is Stephanie's article</p>
+			<img class="image-pic" src=http://i.imgur.com/aIcwPqe.jpg"">
+			<h3 class="profile-name">Stephanie Krause</h3>
+			<p class="profile-text">My husband and I are new to Nashville and we are enjoying all it has to offer.  We live in East Nashville and we often find ourselves walking to the <a class="profile-link" href="http://www.nashvillelifestyles.com/entertainment/a-day-in-five-points">Five Points</a> area to enjoy food and beverages.  Heading from our home in the other direction we are able to experience <a class="profile-link" href="http://www.nashville.gov/Parks-and-Recreation/Nature-Centers-and-Natural-Areas/Shelby-Bottoms-Nature-Center/Shelby-Bottoms-Park.aspx">Shelby Bottoms Nature Park</a> to enjoy the great outdoors and have some fun playing with our sheltie, Louie.  We really love living in this part of Nashville.  We are able to walk or ride bike downtown and we are taking advantage of all the fun activites that go on there.</p>
 			
 		</article>
-		<footer>
-			
+		<footer class="footer">
+			<p>Anderson, Andrew and Stephanie collaborated on this site for their first team project while attending Nashville software school.</p>
+			<div id="nss-info">
+				<img class="footer-image" src="https://pbs.twimg.com/profile_images/539187931131293697/9E8g9xOm_400x400.png">
+				<p class="nss-text"><a href="http://nashvillesoftwareschool.com/">Nashville Software School (NSS)</a> is a place where a person with aptitude, motivation, passion and commitment can learn the craft of software development.</p>
+			</div>
 		</footer>
 	</body>
 </html>
