--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 			<h1>TEAM EXERCISE 1</h1>
 			<nav>
 				<ul>
-					<a href="#anderson"><li>Anderson</li></a>
+					<li><a href="#anderson">Anderson</a></li>
 					<li>/</li>
-					<a href="#andrew"><li>Andrew</li></a>
+					<li><a href="#andrew">Andrew</a></li>
 					<li>/</li>
-					<a href="#stephanie"><li>Stephanie</li></a>
+					<li><a href="#stephanie">Stephanie</a></li>
 				</ul>
 			</nav>
 			<img src="" id="main-pic">
@@ -23,7 +23,7 @@
 		<article id="anderson" class="team-member">
 			<img class="profile-pic" src="http://i.imgur.com/CeyGe84.jpg" alt="living that health goth lifestyle">
 			<h3 class="profile-name">Anderson Cook</h3>
-				<p class="profile-text">Hey guys.  This some info about me.  I'm the guy in the pic.  I can assure you that it's very serious and I mean it a lot.  I make music and loud, obnoxious noises.  I run a cassette label called <a href="http://www.tapesofaneongod.com">Tapes of a Neon God</a> in my spare time and I'm sure that spare time is now over.  You can find me on social media if you look hard enough, but they're not tied to me name as they are for making jokes.</p>
+				<p class="profile-text">Hey guys.  This some info about me.  I'm the guy in the pic.  I can assure you that it's very serious and I mean it a lot.  I make music and loud, obnoxious noises.  I run a cassette label called <a href="http://www.tapesofaneongod.com">Tapes of a Neon God</a> in my spare time and I'm sure that spare time is now over.  You can find me on social media if you look hard enough, but they're not tied to my name.  They're just for making jokes.</p>
 		</article>
 		<article id="andrew" class="team-member">
   			 <img class="profile-pic" src="http://i.imgur.com/lI7Uvzp.jpg">
