adjusted CSS in footer

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			</div>
 		</article>	
 		<footer class="footer">
-			<p>Anderson, Andrew and Stephanie collaborated on this site for their first team project while attending Nashville software school.</p>
+			<p class="footer-text">Anderson, Andrew and Stephanie collaborated on this site for their first team project while attending Nashville software school.</p>
 			<div id="nss-info">
 				<img class="footer-image" src="https://pbs.twimg.com/profile_images/539187931131293697/9E8g9xOm_400x400.png">
 				<p class="nss-text"><a href="http://nashvillesoftwareschool.com/" target="_blank">Nashville Software School (NSS)</a> is a place where a person with aptitude, motivation, passion and commitment can learn the craft of software development.</p>
